# aTox

./: .gitignore  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle.kts
atox/: build.gradle.kts  detekt-baseline.xml  proguard-rules.pro
atox/src/debug/res/values/: strings.xml
atox/src/main/: AndroidManifest.xml
atox/src/main/kotlin/: App.kt  AutoAway.kt  MainActivity.kt
atox/src/main/kotlin/di/: AppModule.kt  DatabaseModule.kt  ViewModelModule.kt
atox/src/main/kotlin/media/: SoundEffectPlayer.kt  SystemSoundPlayer.kt
atox/src/main/kotlin/receiver/: ActionReceiver.kt
atox/src/main/kotlin/service/: ToxService.kt
atox/src/main/kotlin/settings/: Settings.kt
atox/src/main/kotlin/tox/: CallEventHandler.kt  EventListenerCallbacks.kt  FriendEventHandler.kt  GroupEventHandler.kt
atox/src/main/kotlin/ui/: NotificationHelper.kt  ReceiveShareDialogFragment.kt  Util.kt
atox/src/main/res/values/: strings.xml
atox/src/main/res/values-ru/: strings.xml
atox/src/main/res/xml/: file_paths.xml
config/detekt/: detekt.yml
core/: build.gradle.kts  detekt-baseline.xml
core/docs/: tox_guide.md
core/schemas/ltd.evilcorp.core.db.Database/: 6.json  7.json
core/src/androidTest/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  NativeToxAv.cpp  NativeToxCore.cpp
core/src/main/res/values/: strings.xml
core/src/main/res/values-ru/: strings.xml
domain/: build.gradle.kts  detekt-baseline.xml
domain/src/main/kotlin/av/: AudioCapture.kt
domain/src/main/kotlin/feature/: CallManager.kt  (+2 more)
gradle/: libs.versions.toml
scripts/: android.mk
(+813 files in other folders)
